Removed POJOS that are not in use. Updated security. Added a Dockerfile and will integrate into network mesh testing.